# asmr-recorder

./: .gitignore  DEBUGGING_GUIDE.md  README.md  RECORDING_DEBUG_FINDINGS.md  RECORDING_IMPLEMENTATION.md  dev.sh  initial-development-instructions  package-lock.json  package.json
.claude/: settings.local.json
.claude/skills/: dev-log.md  rust.md  tailwind.md  tauri.md  typescript-react.md
.cursor/: README.md  dev-log.mdc  nextjs-typescript-tailwind.mdc  shadcn-nextjs.mdc  tailwind-shadcn.mdc  tailwind.mdc  tauri.mdc
frontend/: package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Recorder.tsx  asmr-recorder.tsx  region-selector-overlay.tsx
frontend/src/components/asmr-recorder/: browser-recorder.tsx  camera-select-modal.tsx  preview.tsx  record-modal.tsx  recording-canvas.tsx  region-selector.tsx  timeline.tsx  toolbar.tsx
frontend/src/components/ui/: select.tsx
frontend/src/contexts/: recording-context.tsx
frontend/src/hooks/: use-recording.ts
frontend/src/types/: recording.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: audio.rs  audio_mixer.rs  compositor.rs  encoder.rs  external_recorder.rs  lib.rs  main.rs  manager.rs  recording.rs  screen.rs  screen_capture.rs  screen_fallback.rs  screen_macos.rs  screen_windows.rs  system_audio.rs  system_audio_fallback.rs  system_audio_macos.rs  webcam.rs
