[package]
name = "asmr_recorder"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "asmr_recorder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio capture
cpal = "0.15"

# Webcam capture
nokhwa = { version = "0.10", features = ["input-native"] }

# Video/Audio encoding (optional - requires FFmpeg system library)
ffmpeg-next = { version = "8.0", optional = true }

# Async runtime
tokio = { version = "1", features = ["full", "sync", "rt-multi-thread"] }

# Image processing for compositing
image = "0.25"

# Thread-safe primitives
parking_lot = "0.12"
crossbeam-channel = "0.5"

# Error handling
thiserror = "1.0"

# Utilities
chrono = "0.4"
dirs = "5.0"
base64 = "0.22"

[features]
default = ["ffmpeg"]
ffmpeg = ["ffmpeg-next"]

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = { version = "1", features = ["async", "macos_14_0"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-capture = "2.0.0-alpha.7"

[target.'cfg(not(any(target_os = "macos", target_os = "windows")))'.dependencies]
scrap = "0.5"
